--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,8 @@ android {
             minifyEnabled false
             testCoverageEnabled true
 
+            applicationIdSuffix '.dev'
+            versionNameSuffix '-dev'
         }
 
 
@@ -102,6 +104,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
 
+            applicationIdSuffix '.release'
+            versionNameSuffix '-release'
         }
     }
 }
